# OpenQiming-Agent

./: README.md
agent_backend/: README.md  pyproject.toml
agent_backend/agent_platform_basic/: pyproject.toml
agent_backend/agent_platform_basic/agent_platform_basic/: __init__.py
agent_backend/agent_platform_basic/agent_platform_basic/exceptions/: __init__.py  base_http_exception.py  out_put_parser_exception.py
agent_backend/agent_platform_basic/agent_platform_basic/extensions/: __init__.py  ext_database.py  ext_mail.py  ext_redis.py  ext_sentry.py  ext_storage.py
agent_backend/agent_platform_basic/agent_platform_basic/libs/: __init__.py  aes.py  db_utils.py  external_api.py  infinite_scroll_pagination.py  json_in_md_parser.py  login.py  oauth.py  oauth_data_source.py  string_utils.py
agent_backend/agent_platform_basic/agent_platform_basic/middlewares/: cors_middleware.py
agent_backend/agent_platform_basic/agent_platform_basic/models/: __init__.py
agent_backend/agent_platform_common/: README.md  pyproject.toml
agent_backend/agent_platform_common/agent_platform_common/: __init__.py
agent_backend/agent_platform_common/agent_platform_common/configs/: __init__.py  app_config.py
agent_backend/agent_platform_common/agent_platform_common/constants/: __init__.py  metabolic_redis_const.py
agent_backend/agent_platform_common/agent_platform_common/contexts/: __init__.py
agent_backend/agent_platform_core/: .gitignore  README.md  pyproject.toml
agent_backend/agent_platform_core/agent_platform_core/: __init__.py  hosting_configuration.py  indexing_runner.py
agent_backend/agent_platform_core/agent_platform_core/agent/: async_cot_completion_agent_runner.py  base_agent_runner.py  cot_chat_agent_runner.py  cot_completion_agent_runner.py  entities.py  llama_chat_agent_runner.py  plugin_entities.py
agent_backend/agent_platform_core/agent_platform_core/app/: __init__.py
agent_backend/agent_platform_core/agent_platform_core/callback_handler/: agent_tool_callback_handler.py  async_index_tool_callback_handler.py  index_tool_callback_handler.py  workflow_tool_callback_handler.py
agent_backend/agent_platform_core/agent_platform_core/constants/: __init__.py  model_template.py  workflow_template.py
agent_backend/agent_platform_core/agent_platform_core/contexts/: __init__.py
agent_backend/agent_platform_core/agent_platform_core/embedding/: async_cached_embedding.py  cached_embedding.py  retrieval.py
agent_backend/agent_platform_core/agent_platform_core/entities/: agent_entities.py  knowledge_entities.py  model_entities.py  provider_configuration.py  provider_entities.py
agent_backend/agent_platform_core/agent_platform_core/events/: __init__.py
agent_backend/agent_platform_core/agent_platform_core/extension/: api_based_extension_requestor.py  ext_code_based_extension.py  ext_hosting_provider.py  extensible.py  extension.py
agent_backend/agent_platform_core/agent_platform_core/external_data_tool/: base.py  external_data_fetch.py  factory.py
agent_backend/agent_platform_core/agent_platform_core/factories/: file_factory.py  variable_factory.py
agent_backend/agent_platform_core/agent_platform_core/file/: constants.py  file_manager.py  file_repository.py  helpers.py  tool_file_parser.py
agent_backend/agent_platform_core/agent_platform_core/helper/: encrypter.py  model_provider_cache.py  position_helper.py  ssrf_proxy.py  tool_parameter_cache.py  tool_provider_cache.py
agent_backend/agent_platform_core/agent_platform_core/llm_generator/: __init__.py
agent_backend/agent_platform_core/agent_platform_core/memory/: async_token_buffer_memory.py
agent_backend/agent_platform_core/agent_platform_core/model_runtime/: __init__.py
agent_backend/agent_platform_core/agent_platform_core/models/: __init__.py
agent_backend/agent_platform_core/agent_platform_core/moderation/: async_output_moderation.py  base.py  factory.py  input_moderation.py  output_moderation.py
agent_backend/agent_platform_core/agent_platform_core/ops/: base_trace_instance.py  ops_trace_manager.py  utils.py
agent_backend/agent_platform_core/agent_platform_core/prompt/: advanced_prompt_transform.py  agent_history_prompt_transform.py  async_advanced_prompt_transform.py  async_agent_history_prompt_transform.py  async_prompt_transform.py  async_simple_prompt_transform.py  prompt_transform.py  simple_prompt_transform.py
agent_backend/agent_platform_core/agent_platform_core/repositories/: __init__.py  sqlalchemy_workflow_execution_repository.py  sqlalchemy_workflow_node_execution_repository.py
agent_backend/agent_platform_core/agent_platform_core/tasks/: ops_trace_task.py
agent_backend/agent_platform_core/agent_platform_core/tools/: __init__.py  async_tool_engine.py  async_tool_label_manager.py  errors.py  signature.py  tool_engine.py  tool_file_manager.py  tool_label_manager.py
agent_backend/agent_platform_core/agent_platform_core/variables/: segments.py  variables.py
agent_backend/agent_platform_service/: pyproject.toml
agent_backend/agent_platform_service/agent_platform_service/: app.py
agent_backend/agent_platform_service/agent_platform_service/events/: app_event.py
agent_backend/agent_platform_service/agent_platform_service/extensions/: ext_celery.py
agent_backend/agent_platform_service/agent_platform_service/fields/: __init__.py  annotation_fields.py  api_based_extension_fields.py  app_fields.py  app_model_config_async.py  conversation_fields.py  data_source_fields.py  dataset_fields.py  document_fields.py  file_fields.py  member_fields.py  (+8 more)
agent_backend/agent_platform_test/: README.md  pyproject.toml
agent_backend/agent_platform_test/agent_platform_test/: __init__.py  user_info.xlsx
agent_backend/docs/scripts/: init_schema.sql
agent_backend/uploads/: rag_test.docx
(+700 files in other folders)
