[tool.poetry]
name = "agent-platform-project"
version = "0.1.0"
description = "agent_platform is a platform extending library built to power building LLM application."
authors = [""]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.7"
agent-platform-core = { path = "./agent_platform_core", develop = true }
agent-platform-common = { path = "./agent_platform_common", develop = true }
agent-platform-service = { path = "./agent_platform_service", develop = true }
agent-platform-test = {path = "./agent_platform_test",  develop = true }
agent-platform-metabolic = {path = "./agent_platform_metabolic",  develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
