[tool.poetry]
name = "agent-platform-test"
version = "0.1.0"
description = "agent_platform_extensions is a platform extensions extending library built to power building LLM application."
authors = [""]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.7"

agent-platform-core = { path = "../agent_platform_core", develop = true }
agent-platform-basic = { path = "../agent_platform_basic", develop = true }
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
